--- a/src/app/pages/pages-template/pages-template.component.html
+++ b/src/app/pages/pages-template/pages-template.component.html
@@ -40,6 +40,11 @@
               Tài khoản người dùng
             </a>
           </li>
+          <li nz-menu-item nzMatchRouter>
+            <a [routerLink]="['/domain']">
+              Tên miền
+            </a>
+          </li>
         </ul>
       </li>
     </ul>
