Admin Publisher Author

--- a/src/app/pages/pages-template/pages-template.component.html
+++ b/src/app/pages/pages-template/pages-template.component.html
@@ -17,7 +17,19 @@
         <ul>
           <li nz-menu-item nzMatchRouter>
             <a [routerLink]="['/news-category']">
-              Danh mục
+              Danh mục bài viết
+            </a>
+          </li>
+
+
+          <li nz-menu-item nzMatchRouter>
+            <a [routerLink]="['/author']">
+              Author
+            </a>
+          </li>
+          <li nz-menu-item nzMatchRouter>
+            <a [routerLink]="['/publisher']">
+              Publisher
             </a>
           </li>
         </ul>
