--- a/src/app/shared/component/user-domain-filter/user-domain-filter.component.html
+++ b/src/app/shared/component/user-domain-filter/user-domain-filter.component.html
@@ -12,7 +12,7 @@
         </nz-form-control>
       </nz-form-item>
     </div>
-    <div nz-col nzSpan="12">
+    <div *ngIf="domainInput" nz-col nzSpan="12">
       <nz-form-item>
         <nz-form-label [nzSm]="10" [nzXs]="24" nzFor="domainId">Domain</nz-form-label>
         <nz-form-control [nzSm]="14" [nzXs]="24" [nzErrorTip]="formErrors['domainId']">
