--- a/src/app/pages/pages-template/pages-template.component.html
+++ b/src/app/pages/pages-template/pages-template.component.html
@@ -23,6 +23,11 @@
 
 
           <li nz-menu-item nzMatchRouter>
+            <a [routerLink]="['/video']">
+              Video
+            </a>
+          </li>
+          <li nz-menu-item nzMatchRouter>
             <a [routerLink]="['/author']">
               Author
             </a>
