--- a/src/app/pages/author/author-index/author-index.component.html
+++ b/src/app/pages/author/author-index/author-index.component.html
@@ -26,7 +26,7 @@
       <td>{{data.createdAt | date:'dd/MM/yyyy'}}</td>
       <td>{{data.name}}</td>
       <td>{{data.description}}</td>
-      <td>{{data.url}}</td>
+      <td><a target="_blank" *ngIf="data.url" href="{{data.url}}">{{data.url}}</a></td>
       <td>{{data.user?.fullName}}</td>
       <td>
         <button nz-button nzType="primary" nzSize="small" (click)="edit(data)">Sửa</button>
