--- a/src/app/pages/domain/domain-edit/domain-edit.component.html
+++ b/src/app/pages/domain/domain-edit/domain-edit.component.html
@@ -5,6 +5,13 @@
       <input nz-input formControlName="domain" id="domain" />
     </nz-form-control>
   </nz-form-item>
+
+  <nz-form-item>
+    <nz-form-label [nzSm]="10" [nzXs]="24" nzFor="https">Https</nz-form-label>
+    <nz-form-control [nzSm]="14" [nzXs]="24" [nzErrorTip]="formErrors['https']">
+      <nz-switch nzSize="small" formControlName="https"></nz-switch>
+    </nz-form-control>
+  </nz-form-item>
   <nz-form-item>
     <nz-form-label [nzSm]="10" [nzXs]="24" nzFor="userId">User</nz-form-label>
     <nz-form-control [nzSm]="14" [nzXs]="24" [nzErrorTip]="formErrors['userId']">
