--- a/src/app/pages/video/video-create/video-create.component.html
+++ b/src/app/pages/video/video-create/video-create.component.html
@@ -23,7 +23,7 @@
   <nz-form-item>
     <nz-form-label [nzSm]="10" [nzXs]="24" nzFor="totalWatch">Lượt xem</nz-form-label>
     <nz-form-control [nzSm]="14" [nzXs]="24" [nzErrorTip]="formErrors['totalWatch']">
-      <nz-input-number formControlName="totalWatch" [nzMin]="0" [nzStep]="999999"></nz-input-number>
+      <nz-input-number formControlName="totalWatch" [nzMin]="0" [nzMax]="999999"></nz-input-number>
     </nz-form-control>
   </nz-form-item>
 
