Admin Domain Template

--- a/src/app/pages/pages-template/pages-template.component.html
+++ b/src/app/pages/pages-template/pages-template.component.html
@@ -58,6 +58,11 @@
       <li nz-submenu nzOpen nzTitle="Giao diện" nzIcon="file-image">
         <ul>
           <li nz-menu-item nzMatchRouter>
+            <a [routerLink]="['/domain-template']">
+              Cấu hình domain
+            </a>
+          </li>
+          <li nz-menu-item nzMatchRouter>
             <a [routerLink]="['/template-data']">
               Cấu hình giao diện
             </a>
